@@ -5,6 +5,11 @@
 2014-09-08 Added nist use flag
 2014-09-08 Initial version
 
+*openssl-1.0.1j (17 Oct 2014)
+
+  17 Oct 2014; Harold Naparst <harold@alum.mit.edu> +openssl-1.0.1j.ebuild:
+  Add openssl-1.0.1j.ebuild
+
 *openssl-1.0.2_beta3 (26 Sep 2014)
 
   26 Sep 2014; Harold Naparst <harold@alum.mit.edu>
